@@ -27,6 +27,7 @@ depth: 1
  * Ensure visual consistency between buttons and links as buttons in Windows high-contrast mode (Albina Starykova)
  * Ensure `ChooserBlock.extract_references` uses the model class, not the model string (Alex Tomkins)
  * Incorrectly formatted link in the documentation for Wagtail community support (Bolarinwa Comfort Ajayi)
+ * Ensure logo shows correctly on log in page in Windows high-contrast mode (Loveth Omokaro)
 
 ## Upgrade considerations
 
